fixed aligning for blog author avatar

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -261,6 +261,9 @@ nav {
         display: inline-block;
         vertical-align: bottom;
         margin-left: 15px;
+        p {
+          margin-bottom: 5px;
+        }
       }
 
       img {
